k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-service
  namespace: library
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
